--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf-js-viewer": "workspace:*"
+    "custom-react-pdf-viewer": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
