--- a/packages/custom-react-pdf-viewer/package.json
+++ b/packages/custom-react-pdf-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "custom-react-pdf-viewer",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "A production-ready React wrapper around PDF.js with toolbar and find bar, licensed under Apache 2.0",
   "license": "Apache-2.0",
   "main": "./dist/node.mjs",
@@ -55,10 +55,9 @@
     "react-dom": ">=18",
     "pdfjs-dist": "4.2.67"
   },
-   "peerDependenciesMeta": {
-     "pdfjs-dist": { "optional": false }
-   },
-  "dependencies": {},
+  "dependencies": {
+    "pdfjs-dist": "4.2.67"
+  },
   "devDependencies": {
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -66,7 +65,6 @@
     "react-dom": "^18.3.1",
     "typescript": "^5.2.2",
     "tsup": "^8.0.2",
-    "glob": "^10.4.1",
-    "pdfjs-dist": "4.2.67"
+    "glob": "^10.4.1"
   }
 }
